--- a/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
+++ b/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="rocket.app.view.MortgageController">
-
+<AnchorPane fx:id="RocketMain" prefHeight="552.0" prefWidth="657.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
+   <children>
+      <AnchorPane layoutY="1.0" prefHeight="558.0" prefWidth="668.0">
+         <children>
+            <Label fx:id="CreditScore" layoutX="31.0" layoutY="29.0" prefHeight="13.0" prefWidth="69.0" text="Credit Score:" />
+            <Label fx:id="Term" layoutX="35.0" layoutY="83.0" text="Term:" />
+            <Label fx:id="Income" layoutX="28.0" layoutY="119.0" text="Income:" />
+            <Label fx:id="Expenses" layoutX="28.0" layoutY="169.0" text="Expenses:" />
+            <Label fx:id="HouseCost" layoutX="25.0" layoutY="212.0" text="House Cost:" />
+            <Label fx:id="lblMortgagePayment" layoutX="12.0" layoutY="382.0" text="Payment:" />
+            <Button fx:id="CalcLoanbtn" layoutX="49.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#btnCalculatePayment" prefHeight="22.0" prefWidth="127.0" text="Calculate Payment" />
+            <TextField fx:id="txtCreditScore" layoutX="138.0" layoutY="26.0" prefHeight="15.0" prefWidth="158.0" />
+            <ComboBox fx:id="cmbTerm" layoutX="135.0" layoutY="78.0" prefWidth="150.0">
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="15" />
+                        <MenuItem mnemonicParsing="false" text="30" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
+            </ComboBox>
+            <TextField fx:id="txtIncome" layoutX="131.0" layoutY="116.0" />
+            <TextField fx:id="txtHouseCost" layoutX="132.0" layoutY="208.0" />
+            <TextField fx:id="txtExpenses" layoutX="132.0" layoutY="165.0" />
+            <Label fx:id="pay" layoutX="203.0" layoutY="374.0" prefHeight="108.0" prefWidth="199.0" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
